--- a/201111_monthly2.html
+++ b/201111_monthly2.html
@@ -12,6 +12,7 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="box2"><p>マテンロウ計画様制作のシステム「<a href="http://usamimi.info/~ssproject/doa/index.html">Dead or AliCe</a>」内のおまけルール、<br>かけひきで遊んだものです。</p></div>
         <h3 class="h3-b">
             2020年11月初旬 マンスリー入居翌日
         </h3>
