--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="background"></div>
     <div class="body">
         <h1 class="index_h1">あなたへの花 | ミツまし写経ログ</h1>
-        
+        <div class="box2"><p>ブラッドムーンキャンペーン「<a href="https://doccia-hanagumori.github.io/flower/index.html">あなたへの花</a>」本編後～EXまでのミツルと真城の1年間のお話のログです。<br>
+            何の前触れもなく性描写が始まることがあります。</p></div>
+        <br>
         <ul class="list">
             <li class="list_list">
                 <a href="180507_cover.html" class="list_link">18/05/07 初対面頃</a>
