--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         </ul>
         <ul class="list">
             <li class="list_list">
+                <a href="201028_mitsubd.html" class="list_link">20/10/28 ミツル誕生日（ログ準備中）</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
                 <a href="201101_halloween.html" class="list_link">20/11/01 ハロウィンの狩り翌日</a>
             </li>
         </ul>
