--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
         <ul class="list">
             <li class="list_list">
-                <a href="201028_mitsubd.html" class="list_link">20/10/28 ミツル誕生日（ログ準備中）</a>
+                <a href="201028_mitsubd.html" class="list_link">20/10/28 ミツル誕生日</a>
             </li>
         </ul>
         <ul class="list">
@@ -33,12 +33,12 @@
         </ul>
         <ul class="list">
             <li class="list_list">
-                <a href="201110_monthly.html" class="list_link">20/11 マンスリー入居</a>
+                <a href="201110_monthly.html" class="list_link">20/11/- マンスリー入居</a>
             </li>
         </ul>
         <ul class="list">
             <li class="list_list">
-                <a href="201111_monthly2.html" class="list_link">20/11 かけひき-マンスリー入居翌日</a>
+                <a href="201111_monthly2.html" class="list_link">20/11/- かけひき-マンスリー入居翌日</a>
             </li>
         </ul>
         <ul class="list">
