--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                 <a href="210214_vd.html" class="list_link">21/02/14 バレンタインデー</a>
             </li>
         </ul>
-        <img src="img/hana.png" class="hana">
+
+        <details>
+            <summary><h1 class="index_h1">SS</h1></summary>
         <ul class="list">
             <li class="list_list">
                 <a href="ss09.html" class="list_link">2.51</a>
@@ -175,7 +177,7 @@
             </li>
         </ul>
         <div class="sstxt">吐き出した煙が立ち昇り、風に巻かれて拡散していくのをただぼんやりと眺めていた。| if</div>
-            
+    </details>   
 
         <img src="img/hana.png" class="hana">
         <ul class="list">
