--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </ul>
 
         <details>
-            <summary><h1 class="index_h1">SS</h1></summary>
+            <summary><h1 class="index_h1">-SS-</h1></summary>
         <ul class="list">
             <li class="list_list">
                 <a href="ss09.html" class="list_link">2.51</a>
