--- a/index.html
+++ b/index.html
@@ -106,12 +106,6 @@
             <summary>
                 <h1 class="index_h1">-SS-</h1>
             </summary>
-            <ul class="list">
-                <li class="list_list">
-                    <a href="ss09.html" class="list_link">2.51</a>
-                </li>
-            </ul>
-            <div class="sstxt">「出ないように努力しろ！」「わははは」| 本編2話後</div>
 
             <ul class="list">
                 <li class="list_list">
@@ -119,6 +113,13 @@
                 </li>
             </ul>
             <div class="sstxt">路地裏へと引き込まれて、そのまま唇を塞がれる。</div>
+            
+            <ul class="list">
+                <li class="list_list">
+                    <a href="ss09.html" class="list_link">2.51</a>
+                </li>
+            </ul>
+            <div class="sstxt">「出ないように努力しろ！」「わははは」| 本編2話後</div>
 
             <br>
             <ul class="list">
@@ -133,7 +134,7 @@
                     <a href="ss03.html" class="list_link">無題</a>
                 </li>
             </ul>
-            <div class="sstxt">手の中の熱を握りしめる。</div>
+            <div class="sstxt">手の中の熱を握りしめる。| 看病</div>
 
             <ul class="list">
                 <li class="list_list">
@@ -154,7 +155,7 @@
             <br>
             <ul class="list">
                 <li class="list_list">
-                    <a href="ss08.html" class="list_link">無題</a>
+                    <a href="ss08.html" class="list_link">いつものあした</a>
                 </li>
             </ul>
 
