--- a/ss07.html
+++ b/ss07.html
@@ -20,12 +20,14 @@
         　粘ついた音を立てて咳き込む。その度に全身に引き裂かれるような痛みが走った。寒い。血を流すごとに、体温も失われていくのが分かる。口の中には生臭い血の匂いが広がっている。<br>
         　差し出した腕と、それを貫いて刺された胸。腹に2箇所。自覚している傷はそこまでで、おそらく実際に攻撃を受けた箇所はもっと多い。確かめる気はなかった。どうせ死ぬのだから、意味がない。<br>
         　視界が霞む。夜高さん、と狩人の誰かがミツルを呼ぶ声が遠い。痛みはもはや感じない。ただ寒かった。だけど寒くて堪らないのはあの日からずっとそうだから、今更だ。<br>
-        　死ぬことは怖くない。ずっと早く終わりにしたかった。真城がいない生から解放されたかった。それができずに万全と生き続けてしまったのは、ひとえに真城に死なないことを願われたからで。だけどそれは死ねない理由であって、生きる理由ではなかった。<br>
-        　生きる理由はない。あの日から、ずっと。だけどここで誰かを助けて死ねるなら、少なくとも生かされた理由にはなるのかもしれないと思えた。<br>
+        　死ぬことは怖くない。ずっと早く終わりにしたかった。真城がいない生から解放されたかった。それができずに漫然と生き続けてしまったのは、ひとえに真城に死なないことを願われたからで。<br>
+        　だけどそれは死ねない理由であって、生きる理由ではなかった。<br>
+        　生きる理由はない。あの日から、ずっと。だけどここで誰かを助けて死ねるなら、少なくとも生かされた理由くらいにはなるのかもしれないと思えた。それも結局言い訳に過ぎないのだけど。<br>
         　──生きていられなくてごめん。命を投げ捨ててごめん。真城が大切にしてくれたものを大切にできなくてごめん。でも俺頑張ったよな。真城が助けてくれた命を無駄にしてないよな。次に繋げたよな。<br>
         　なあ。真城。<br>
-        　懺悔にも問いかけにも、都合のいい幻聴が聞こえることはついになかった。でも、きっとそれでいい。幻に縋ることなど許されない。許されなくていい。真城が望まなかった狩りを続けて、真城が望まなかった死を迎える自分。真城との約束を何一つ果たせない、嘘つきの役立たずなど。<br>
-        　それでも。きっと向こうに行けば会えるのだと。そんな夢を見ることくらいは。
+        　懺悔にも問いかけにも、都合のいい幻聴すらついに聞こえることはなかった。<br>
+        　でも、きっとそれでいい。幻に縋ることなど許されない。許されなくていい。真城が望まなかった狩りを続けて、真城が望まなかった死を迎える自分。真城との約束を何一つ果たせない、嘘つきの役立たずなど。<br>
+        　それでも。きっと向こうに行けば真城に会えるのだと。そんな夢を見ることくらいは。
     </div>
     </body>
 
