--- a/ss05.html
+++ b/ss05.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>無題</title>
@@ -24,7 +25,7 @@
         　真城の存在によって家族を奪われ、孤独を強いられた彼を愛す疫病神が自分だった。<br>
         　自分が命を救った相手なんだから、少しくらい関わっても良いだろう。かつての自分の傲慢な思考の、その愚かしさを呪わないはずはない。声をかけると表情を明るくするそのさまを、嬉しく思う理由からも目を逸らしていた、やはりどうしようもなく、愚かだった自分を。与える側の優越感がいつしか裏返り、奪った側の罪悪感に転化するまでそう時間はかからなかった。そしてそうなった頃には全てが手遅れだった。<br>
         　ミツルのことが好きだった。<br>
-        　その髪の少し癖のついたやわらかさが。茶色がかった丸い瞳の、自分に向けられるまなざしが。真城の牙を受け入れる少し筋張った首の線が。触れてくる掌の前よりもも硬くなった皮膚の感触。ひとつひとつ、触れて確かめる。そのたびに実感がこみあげる。<br>
+        　その髪の少し癖のついたやわらかさが。茶色がかった丸い瞳の、自分に向けられるまなざしが。真城の牙を受け入れる少し筋張った首の線が。触れてくる掌の前よりも硬くなった皮膚の感触。ひとつひとつ、触れて確かめる。そのたびに実感がこみあげる。<br>
         　夜高ミツルという存在を形成するすべてが、夜高ミツルという存在を形成しているがために。真城にはそれらがどうしようもなく好ましく感じられる。ミツルという存在の一部であるからこそ、そのすべてに惹かれている。自覚している。仮にひとつふたつ、ミツルからそれらの特徴が失われることがあったとて、それが変わらずミツルの一部であるならば真城は何ひとつ問題なくその変化を受け入れるだろう。悲しむことすらできないかもしれない。<br>
         　ただミツルがミツルとして、できる限りの艱難辛苦とは無縁で生きていてくれれば、それでよかった。そればかりを望んでいた。<br>
         　だから彼の人生には自分というノイズがどうしても邪魔で、途方もなく悲しくなる。<br>
@@ -40,7 +41,7 @@
         　近くで瞳が合うと、求められていることが分かる。自分の存在がミツルを満たすことができるのが真城には嬉しいのだ。ミツルの役に立てることが、望まれることが何よりも嬉しい。繋がって熱を共有することが。ミツルが自分をかき抱いて、心の底から気持ちよさそうにしかめられる表情のさまに、彼を満たしながら満たされている至福を感じられる。嫌で仕方ないこの馬鹿げた身体の性質が、ミツルに何か与えられているというだけで、真城はこれで良いのだとすら思えてしまう。<br>
         　──ミツルが自分に対して欲を抱いている、という事実には、いまだに腑に落ちないところはあるが。何かの間違いであるような気がしてならない。やはりこの身体に惑わされた結果なのではないかと疑う気持ちが、証明された後でも拭いきれずにいる。<br>
         　以前の自分であれば、おかしいだろ、とでも叫んでいたのではないだろうか。俺らそういうのじゃなくね、だとか。溜まりすぎて頭おかしくなった？　だとか。そういう風に言った、かもしれない。今ではこの思考を動かすのにも苦労する。前はあれが当たり前だったはずなのに、ありとあらゆる当たり前を壊されてしまったから。<br>
-        　とにかくそれでも事実として、ミツルは真城を抱いている。半日離れてもなおその気持ちが消えずにいたあの初めての夜からこちら、ほぼ毎日のように身体を重ねてきている。求められれば求められるほどに真城はミツルを拒めないし、違う、拒もうとももはや思えないのだ。求めてしまいすらする。そうだと決めつけられてあげつらわれる身体の反応ではなく、ことばで、間違いのない真城自身の意思で、ミツルを再現なく求めてしまう。そうするとミツルが嬉しそうに求め返してくるから、間違っていないのだと馬鹿になった頭で信じ込んでしまう。間違いでないはずがないのに。<br>
+        　とにかくそれでも事実として、ミツルは真城を抱いている。半日離れてもなおその気持ちが消えずにいたあの初めての夜からこちら、ほぼ毎日のように身体を重ねてきている。求められれば求められるほどに真城はミツルを拒めないし、違う、拒もうとももはや思えないのだ。求めてしまいすらする。そうだと決めつけられてあげつらわれる身体の反応ではなく、ことばで、間違いのない真城自身の意思で、ミツルを際限なく求めてしまう。そうするとミツルが嬉しそうに求め返してくるから、間違っていないのだと馬鹿になった頭で信じ込んでしまう。間違いでないはずがないのに。<br>
         　好きだと伝えられる。何度も何度でも、いい加減飽きはしないのかと疑問に思えるほどに、ミツルは真城に、そのことばを繰り返す。他愛ない会話の延長線上、真城が怯えてミツルを振り払おうとする時、熱を灯されて肌を重ねるその瞬間。ありとあらゆる場面でミツルは真城に好意を表明しては優しく真城に触れてくる。<br>
         　それも嬉しいのに、やはりどこか、腑に落ちない。<br>
         　彼の好意を疑うつもりはない。だから要するに、しっくり来ないのはこうなっている現実そのものの方だ。夢みたいだ、と彼の背中で漏らしたことがあったが、それともまた違う。とても現実とは思えない。今を形容するならばそういう表現になる。<br>
