--- a/201028_mitsubd.html
+++ b/201028_mitsubd.html
@@ -2728,7 +2728,7 @@
             </div>
         </div>
 
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
 
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf52208d68e7fa6f1e6fd84.png"></div>
@@ -3201,7 +3201,7 @@
         スマホで適当にあたりをつけ、二人で着替えを済ませて、ホテルを出る。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf52208d68e7fa6f1e6fd84.png"></div>
             <div class="p">
@@ -4955,7 +4955,7 @@
         「……帰る」
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf52208d68e7fa6f1e6fd84.png"></div>
             <div class="p">
