--- a/201101_halloween.html
+++ b/201101_halloween.html
@@ -2837,7 +2837,7 @@
                 「…………う、ん」
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83files90e528d615b71fafa9c0d6.png"></div>
             <div class="p">
