--- a/201110_monthly.html
+++ b/201110_monthly.html
@@ -715,7 +715,7 @@
                 「ん」
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd62a8f14af8f2cea4741e4.png"></div>
             <div class="p">
@@ -1612,7 +1612,7 @@
                 ひく、とミツルの腕の回った腰が跳ねた。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf741825164377f3e43cb28.png"></div>
             <div class="p">
@@ -2215,7 +2215,7 @@
                 ますます身を寄せて、揃いのパジャマ越しに肌を重ねた。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf741825164377f3e43cb28.png"></div>
             <div class="p">
@@ -2685,7 +2685,7 @@
                 頷いた。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd62a8f14af8f2cea4741e4.png"></div>
             <div class="p">
