--- a/201223_xmas.html
+++ b/201223_xmas.html
@@ -1800,7 +1800,7 @@
                 頷いた。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf51076844735f72e2254f3.png"></div>
             <div class="p">
