--- a/201231_newyear.html
+++ b/201231_newyear.html
@@ -2102,7 +2102,7 @@
                 小さく笑って、瞼を閉じた。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd62a8f14af8f2cea4741e4.png"></div>
             <div class="p">
@@ -3643,7 +3643,7 @@
                 そそくさと、出しておいた絆創膏に手を伸ばした。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesbe02357bc81508a2e8d3a0.png"></div>
             <div class="p">
@@ -8516,7 +8516,7 @@
                 再び、顔を寄せた。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83files2ee8416c4ce2d6c5d2d715.png"></div>
             <div class="p">
