--- a/210110_cold.html
+++ b/210110_cold.html
@@ -1380,7 +1380,7 @@
                 近くに真城の気配を感じながら、意識が落ちるに任せた。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filese26caf6b590d873829dc56.png"></div>
             <div class="p">
@@ -4496,7 +4496,7 @@
                 それを認めても、ずっとミツルの手を握っていた。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filese26caf6b590d873829dc56.png"></div>
             <div class="p">
