--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
 <body>
     <div class="background"></div>
-    <div class="body">
+    <div class="body-w">
         <h1 class="index_h1">あなたへの花 | ミツまし写経ログ</h1>
+        
         <div class="box2">
             <p>ブラッドムーンキャンペーン「<a
                     href="https://doccia-hanagumori.github.io/flower/index.html">あなたへの花</a>」本編後～EXまでのミツルと真城の1年間のお話のログです。<br>
                 何の前触れもなく性描写が始まることがあります。</p>
         </div>
         <br>
+        <h1 class="index_h2">-LOG-</h2>
         <ul class="list">
             <li class="list_list">
                 <a href="180507_cover.html" class="list_link">18/05/07 初対面頃</a>
@@ -101,10 +103,9 @@
                 <a href="210214_vd.html" class="list_link">21/02/14 バレンタインデー</a>
             </li>
         </ul>
-
         <details>
             <summary>
-                <h1 class="index_h1">-SS-</h1>
+                <h1 class="index_h2">-SS-</h2>
             </summary>
 
             <ul class="list">
@@ -182,10 +183,10 @@
             <div class="sstxt">「ミツってのはひどい男なんだろうな」| if</div>
         </details>
 
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <ul class="list">
             <li class="list_list">
-                <a href="https://doccia-hanagumori.github.io/flower/index.html" class="list_link">「あなたへの花」リプレイサイト</a>
+                <a href="https://doccia-hanagumori.github.io/flower/index.html" class="list_link">「あなたへの花」リプレイ</a>
             </li>
         </ul>
 </body>
