--- a/ss01.html
+++ b/ss01.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         　耳障りな警戒音はより騒々しい破壊音に掻き消された。<br>
         　引き抜いたばかりの防犯ブザーが、狩人の男の振り下ろした両口ハンマーに叩き潰されていた。<br>
