--- a/ss02.html
+++ b/ss02.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         　たゆたうような気怠いまどろみの中で真城は瞼を上げた。<br>
         　仰向けに眠るミツルの、真城のものよりも少し広い胸が、薄闇に沈む視界に浮かび上がる。真城はぼんやりとそこに頬を預けた。涙に濡れた頬に、汗の乾ききらない皮膚の感触が伝わった。<br>
