--- a/ss05.html
+++ b/ss05.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         　誰かの腕でまどろむこと自体は、真城にとってはそう珍しいことではなかった。<br>
         　抱き潰されて意識を失い、目覚めてもなお解放されずにその胸に収まっている。求めを拒めず、欲のはけ口として囲われた身体の、途方もない浅ましさをそのたび思い知っていた。<br>
