--- a/ss06.html
+++ b/ss06.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         　路地裏へと引き込まれて、そのまま唇を塞がれる。<br>
         　背中に腕が回っている。てのひらが背骨をなぞりながら降りて太腿の内側を撫ぜ、さらにその奥を辿る。下着がそこと触れ合わされて、濡れる。<br>
