--- a/ss07.html
+++ b/ss07.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         体が勝手に動いたのだと、そう思いたかった。だけど自分を騙すのももう限界だった。そんな気力すらもうどこにも残っていない。<br>
         　まだ若い狩人──家族を喪ったのだと言っていた──の背後から血槍が迫っていた。声をかけるよりも割って入る方が早かった。<br>
