--- a/ss08.html
+++ b/ss08.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         まどろみの中、右手が宙を掻いてさ迷う。いつも傍にあったはずの温もりを求めて。しかしどれ程探しても求めるものは見つからず、やがて腕は力なく投げ出される。マットレスがそれを受け止める音と、細いチューブで繋がれた点滴が揺れて軋みを上げる音だけが、一人きりの病室に小さく響いた。その揺れるさまも音も、ミツルは感知しない。ただうつろな瞳を虚空に向けて静かに涙を零した。<br>
         　意識が覚醒する。思い出す。思い知らされる。そうだ。死んだのだ。真城は。他の誰よりも求め続けた、ミツルが愛した人は。<br>
