--- a/ss10.html
+++ b/ss10.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         吐き出した煙が立ち昇り、風に巻かれて拡散していくのをただぼんやりと眺めていた。視界の端では、後輩たちが狩りの後始末をしているのが見える。今回はかつての自分のように年若い狩人がいて始めはどうなることかと思ったが、結果として大した被害は出さずに片付けることができた。重畳なことだ。どこか他人事のように思った。<br>
         　いつの間にか、こうして始末を人任せにして自分はただ突っ立っていても許されるようなポジションになってしまっている。八崎市で狩りをしていた頃はいつもミツルが一番の後輩だったから、周囲から熟練の狩人のように扱われるのは今も慣れない。自分には過ぎた評価だとさえ思う。時折尊敬の眼差しなんかで見られると、耐え難い気持ちになる。<br>
