--- a/210130_ts2.html
+++ b/210130_ts2.html
@@ -2626,7 +2626,7 @@
                 ほんのちょっとしょんぼりの気配を漂わせながら頷きます。
             </div>
         </div>
-        <img src="img/hana.png" class="hana">
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files571ea05259bdc568ad2307.png"></div>
             <div class="p">
