--- a/ss03.html
+++ b/ss03.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         　手の中の熱を握りしめる。<br>
         　ミツルはすっかり寝入ってしまったようだった。少し前までは手を握り返されたり、うわ言のように真城を呼んだりしていたが、今はそれもなくなって穏やかな呼吸を繰り返している。<br>
