--- a/ss04.html
+++ b/ss04.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         「ミツってのはひどい男なんだろうな」<br>
         　薄暗い寝室。ベージュのカーテンが引かれていて、枕元に灰皿が置かれている。そのベッドの上。<br>
