--- a/ss09.html
+++ b/ss09.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <div class="background"></div>
-<div class="body">
+<div class="body-w">
     <div class="ss">
         「出ないように努力しろ！」<br>
         「わははは」<br>
