--- a/index.html
+++ b/index.html
@@ -182,7 +182,21 @@
             </ul>
             <div class="sstxt">「ミツってのはひどい男なんだろうな」| if</div>
         </details>
-
+        <details>
+            <summary>
+                <h1 class="index_h2">-OTHER-</h2>
+            </summary>
+            <ul class="list">
+                <li class="list_list">
+                    <a href="https://note.com/ari_ori/n/n5411508fe488" class="list_link" target="_blank" rel="noopener noreferrer">TRPGで半年かけて勝ち取った幸福を喪失した話 | note</a>
+                </li>
+            </ul>
+            <ul class="list">
+                <li class="list_list">
+                    <a href="https://note.com/lacked_lies/n/n20e190a4ab15" class="list_link" target="_blank" rel="noopener noreferrer">失われた幸福と、それにまつわる物語の話 | note</a>
+                </li>
+            </ul>
+        </details>
         <img src="img/hana.svg" class="hana">
         <ul class="list">
             <li class="list_list">
