--- a/210126_gyouza.html
+++ b/210126_gyouza.html
@@ -4964,6 +4964,7 @@
                 しょぼになりながら頷いてました。
             </div>
         </div>
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files571ea05259bdc568ad2307.png"></div>
             <div class="p">
