--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <link rel="icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
-
 <body>
+
     <div class="background"></div>
     <div class="body-w">
         <h1 class="index_h1">あなたへの花 | ミツまし写経ログ</h1>
-        
-        <div class="box2">
+                <div class="box2">
             <p>ブラッドムーンキャンペーン「<a
                     href="https://doccia-hanagumori.github.io/flower/index.html">あなたへの花</a>」本編後～EXまでのミツルと真城の1年間のお話のログです。<br>
                 何の前触れもなく性描写が始まることがあります。</p>
         </div>
-        <br>
-        <h1 class="index_h2">-LOG-</h2>
+        <div class="center"><img src="img/top.gif"></div>
+        <h2 class="index_h2">-LOG-</h2>
         <ul class="list">
             <li class="list_list">
                 <a href="180507_cover.html" class="list_link">18/05/07 初対面頃</a>
@@ -105,7 +104,7 @@
         </ul>
         <details>
             <summary>
-                <h1 class="index_h2">-SS-</h2>
+                <h2 class="index_h2">-SS-</h2>
             </summary>
 
             <ul class="list">
@@ -184,7 +183,7 @@
         </details>
         <details>
             <summary>
-                <h1 class="index_h2">-OTHER-</h2>
+                <h2 class="index_h2">-OTHER-</h2>
             </summary>
             <ul class="list">
                 <li class="list_list">
