--- a/210214_vd.html
+++ b/210214_vd.html
@@ -1556,6 +1556,20 @@
             </div>
         </div>
         <div class="main">
+            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files36221643a0ae9dbccc6798.png"></div>
+            <div class="p">
+                <b class="mitsu">夜高ミツル</b><br>
+                控えめにサクサクしている……
+            </div>
+        </div>
+        <div class="main">
+            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files36221643a0ae9dbccc6798.png"></div>
+            <div class="p">
+                <b class="mitsu">夜高ミツル</b><br>
+                控えめに……繊細…………？
+            </div>
+        </div>
+        <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf52208d68e7fa6f1e6fd84.png"></div>
             <div class="p">
                 <b class="gm">真城朔</b><br>
@@ -1595,6 +1609,13 @@
             <div class="p">
                 <b class="gm">真城朔</b><br>
                 こくこく……
+            </div>
+        </div>
+        <div class="main">
+            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files36221643a0ae9dbccc6798.png"></div>
+            <div class="p">
+                <b class="mitsu">夜高ミツル</b><br>
+                なんというか、これが高級なチョコ……という感じで、
             </div>
         </div>
         <div class="main">
@@ -1924,6 +1945,13 @@
             <div class="p">
                 <b class="mitsu">夜高ミツル</b><br>
                 「甘いな～……」
+            </div>
+        </div>
+        <div class="main">
+            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files988ae4f2f348cac1fdd9a8.png"></div>
+            <div class="p">
+                <b class="mitsu">夜高ミツル</b><br>
+                さっきのがビターな感じだったからか余計にそう思う。
             </div>
         </div>
         <div class="main">
