--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ミツまし写経ログ</title>
     <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="fuwaimg.css">
     <link rel="icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <div class="background"></div>
     <div class="body-w">
         <h1 class="index_h1">あなたへの花 | ミツまし写経ログ</h1>
-                <div class="box2">
+        <div class="box2">
             <p>ブラッドムーンキャンペーン「<a
                     href="https://doccia-hanagumori.github.io/flower/index.html">あなたへの花</a>」本編後～EXまでのミツルと真城の1年間のお話のログです。<br>
                 何の前触れもなく性描写が始まることがあります。</p>
@@ -102,18 +105,18 @@
                 <a href="210214_vd.html" class="list_link">21/02/14 バレンタインデー</a>
             </li>
         </ul>
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
             </summary>
-
             <ul class="list">
                 <li class="list_list">
                     <a href="ss06.html" class="list_link">無題</a>
                 </li>
             </ul>
             <div class="sstxt">路地裏へと引き込まれて、そのまま唇を塞がれる。</div>
-            
+
             <ul class="list">
                 <li class="list_list">
                     <a href="ss09.html" class="list_link">2.51</a>
@@ -183,16 +186,28 @@
         </details>
         <details>
             <summary>
+                <h2 class="index_h2">-PICTURE-</h2>
+            </summary>
+            <div class="center">
+                <a href="img/pic_mushipan.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img class="pict" src="img/pic_mushipan.png"></a>
+                <a href="img/pic_nakki.png" data-fimg="pict" data-fcaption="なっきさんより" class="fuwaimg"><img class="pict" src="img/pic_nakki.png"></a>
+                <a href="img/pic_hase.jpg" data-fimg="pict" data-fcaption="ハセさんより/コミッション依頼品" class="fuwaimg"><img class="pict" src="img/pic_hase.jpg"></a>
+            </div>
+        </details>
+        <details>
+            <summary>
                 <h2 class="index_h2">-OTHER-</h2>
             </summary>
             <ul class="list">
                 <li class="list_list">
-                    <a href="https://note.com/ari_ori/n/n5411508fe488" class="list_link" target="_blank" rel="noopener noreferrer">TRPGで半年かけて勝ち取った幸福を喪失した話 | note</a>
+                    <a href="https://note.com/ari_ori/n/n5411508fe488" class="list_link" target="_blank"
+                        rel="noopener noreferrer">TRPGで半年かけて勝ち取った幸福を喪失した話 | note</a>
                 </li>
             </ul>
             <ul class="list">
                 <li class="list_list">
-                    <a href="https://note.com/lacked_lies/n/n20e190a4ab15" class="list_link" target="_blank" rel="noopener noreferrer">失われた幸福と、それにまつわる物語の話 | note</a>
+                    <a href="https://note.com/lacked_lies/n/n20e190a4ab15" class="list_link" target="_blank"
+                        rel="noopener noreferrer">失われた幸福と、それにまつわる物語の話 | note</a>
                 </li>
             </ul>
         </details>
@@ -202,6 +217,6 @@
                 <a href="https://doccia-hanagumori.github.io/flower/index.html" class="list_link">「あなたへの花」リプレイ</a>
             </li>
         </ul>
+        <script src="fuwaimg.js"></script>
 </body>
-
 </html>
