--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                 <a href="210214_vd.html" class="list_link">21/02/14 バレンタインデー</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210220_ts.html" class="list_link">21/02/20 女の真城としたい話</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
