--- a/210214_vd.html
+++ b/210214_vd.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>写経｜210214 バレンタイン</title>
-       <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="css.css">
     <link rel="icon" href="img/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+</head>
 
 <body>
     <div class="background"></div>
@@ -1951,7 +1953,7 @@
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files988ae4f2f348cac1fdd9a8.png"></div>
             <div class="p">
                 <b class="mitsu">夜高ミツル</b><br>
-                さっきのがビターな感じだったからか余計にそう思う。
+                さっきのがビターな感じだったからか余計にそう
             </div>
         </div>
         <div class="main">
