--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="201101_halloween.html" class="list_link">20/11/01 ハロウィンの狩り翌日</a>
             </li>
         </ul>
-         <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <a href="201103_park.html" class="list_link">20/11/03 深夜の散歩</a>
             </li>
@@ -199,12 +199,12 @@
                 <h2 class="index_h2">-PICTURE-</h2>
             </summary>
             <div class="center">
-                <a href="img/pic_mushipan.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img
-                        class="pict" src="img/pic_mushipan.png"></a>
-                <a href="img/pic_nakki.png" data-fimg="pict" data-fcaption="なっきさんより" class="fuwaimg"><img class="pict"
-                        src="img/pic_nakki.png"></a>
-                <a href="img/pic_hase.jpg" data-fimg="pict" data-fcaption="ハセさんより/コミッション依頼品" class="fuwaimg"><img
-                        class="pict" src="img/pic_hase.jpg"></a>
+                    <a href="img/pic_mushipan.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img
+                            class="pict"  class="brightness" src="img/pic_mushipan.png"></a>
+                    <a href="img/pic_nakki.png" data-fimg="pict" data-fcaption="なっきさんより" class="fuwaimg"><img
+                            class="pict" src="img/pic_nakki.png"></a>
+                    <a href="img/pic_hase.jpg" data-fimg="pict" data-fcaption="ハセさんより/コミッション依頼品" class="fuwaimg"><img
+                            class="pict" src="img/pic_hase.jpg"></a>
             </div>
         </details>
         <details>
