--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
                 <a href="210220_ts.html" class="list_link">21/02/20 女の真城としたい話</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210226_goneru.html" class="list_link">21/02/26 2月の狩りの前日</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
@@ -199,12 +204,12 @@
                 <h2 class="index_h2">-PICTURE-</h2>
             </summary>
             <div class="center">
-                    <a href="img/pic_mushipan.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img
-                            class="pict"  class="brightness" src="img/pic_mushipan.png"></a>
-                    <a href="img/pic_nakki.png" data-fimg="pict" data-fcaption="なっきさんより" class="fuwaimg"><img
-                            class="pict" src="img/pic_nakki.png"></a>
-                    <a href="img/pic_hase.jpg" data-fimg="pict" data-fcaption="ハセさんより/コミッション依頼品" class="fuwaimg"><img
-                            class="pict" src="img/pic_hase.jpg"></a>
+                <a href="img/pic_mushipan.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img
+                        class="pict" class="brightness" src="img/pic_mushipan.png"></a>
+                <a href="img/pic_nakki.png" data-fimg="pict" data-fcaption="なっきさんより" class="fuwaimg"><img class="pict"
+                        src="img/pic_nakki.png"></a>
+                <a href="img/pic_hase.jpg" data-fimg="pict" data-fcaption="ハセさんより/コミッション依頼品" class="fuwaimg"><img
+                        class="pict" src="img/pic_hase.jpg"></a>
             </div>
         </details>
         <details>
