--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                 <a href="210226_goneru.html" class="list_link">21/02/26 2月の狩りの前日</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210228_goneta.html" class="list_link">21/02/28 2月の狩りの後</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
