--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
                 <a href="210228_goneta.html" class="list_link">21/02/28 2月の狩りの後</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210303_hina.html" class="list_link">21/03/03 ひな祭りの日</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210304_mashirobd.html" class="list_link">21/03/04 誕生日プレゼントの話</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
