--- a/210303_hina.html
+++ b/210303_hina.html
@@ -7482,6 +7482,14 @@
             </div>
         </div>
         <div class="main">
+            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files571ea05259bdc568ad2307.png"
+                    alt="avatar"></div>
+            <div class="p">
+                <b class="mitsu">夜高ミツル</b><br>
+                いつもどおりに片付けが終わると、これもいつもどおりに並んでソファに腰掛ける。
+            </div>
+        </div>
+        <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf51076844735f72e2254f3.png"
                     alt="avatar"></div>
             <div class="p">
