--- a/index.html
+++ b/index.html
@@ -132,7 +132,13 @@
         </ul>
         <ul class="list">
             <li class="list_list">
-                <a href="210304_mashirobd.html" class="list_link">21/03/04 誕生日プレゼントの話</a>
+                <div class="list_link">21/03/04 誕生日プレゼントの話</div>
+            </li>
+            <li class="list_list">
+                <a href="210304_mashirobd.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210304_furo.html" class="list_link">2</a>
             </li>
         </ul>
 
