--- a/index.html
+++ b/index.html
@@ -141,7 +141,23 @@
                 <a href="210304_furo.html" class="list_link">2</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210313_cake.html" class="list_link">21/03/13 ケーキ作り</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/03/15 真城の誕生日</div>
+            </li>
+            <li class="list_list">
+                <a href="210315_mashirobd1.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210315_mashirobd2.html" class="list_link">2</a>
+            </li>
+        </ul>
+        
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
