--- a/210315_mashirobd2.html
+++ b/210315_mashirobd2.html
@@ -9442,7 +9442,7 @@
             </div>
         </div>
         <div class="main">
-            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesa0333cde51b60e9570d99d.png"
+            <div class="ic"><img src="img/yodaka50.png"
                     alt="avatar"></div>
             <div class="p">
                 <b class="mitsu">夜高ミツル</b><br>
