--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
         </ul>
         <ul class="list">
             <li class="list_list">
+                <a href="210314_cake2.html" class="list_link">21/03/14 ケーキを食べる</a>
+            </li>
+        </ul>
+                <ul class="list">
+            <li class="list_list">
                 <div class="list_link">21/03/15 真城の誕生日</div>
             </li>
             <li class="list_list">
