--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <a href="210314_cake2.html" class="list_link">21/03/14 ケーキを食べる</a>
             </li>
         </ul>
-                <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <div class="list_link">21/03/15 真城の誕生日</div>
             </li>
@@ -162,7 +162,12 @@
                 <a href="210315_mashirobd2.html" class="list_link">2</a>
             </li>
         </ul>
-        
+        <ul class="list">
+            <li class="list_list">
+                <a href="210316_mashirobd3.html" class="list_link">21/03/16 真城の誕生日の翌日</a>
+            </li>
+        </ul>
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
