--- a/index.html
+++ b/index.html
@@ -167,7 +167,11 @@
                 <a href="210316_mashirobd3.html" class="list_link">21/03/16 真城の誕生日の翌日</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210320_1day.html" class="list_link">21/03/20 誕生日プレゼントのやり直し</a>
+            </li>
+        </ul>
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
