--- a/index.html
+++ b/index.html
@@ -168,8 +168,14 @@
             </li>
         </ul>
         <ul class="list">
+             <li class="list_list">
+                <div class="list_link">21/03/20 誕生日のやり直し</div>
+            </li>
             <li class="list_list">
-                <a href="210320_1day.html" class="list_link">21/03/20 誕生日プレゼントのやり直し</a>
+                <a href="210320_1day.html" class="list_link">1</a>
+            </li>
+                        <li class="list_list">
+                <a href="210321_1day2.html" class="list_link">2</a>
             </li>
         </ul>
         <details>
