--- a/201101_halloween.html
+++ b/201101_halloween.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>写経｜201101 ハロウィンの狩り翌日</title>
@@ -13,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="201028_mitsubd.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="201103_park.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2020/11/1　昼過ぎ
         </h3>
