--- a/201103_park.html
+++ b/201103_park.html
@@ -14,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="201101_halloween.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="201110_monthly.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2020/11/03 深夜
         </h3>
