--- a/201110_monthly.html
+++ b/201110_monthly.html
@@ -12,6 +12,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="201103_park.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="201111_monthly2.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2020年11月初旬
         </h3>
