--- a/201231_newyear.html
+++ b/201231_newyear.html
@@ -13,6 +13,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="201223_xmas.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210109_snow.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2020/12/31　夜明け前
         </h3>
