--- a/210109_snow.html
+++ b/210109_snow.html
@@ -12,6 +12,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="201231_newyear.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210110_cold.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/01/19　21時
         </h3>
