--- a/210116_ryouri.html
+++ b/210116_ryouri.html
@@ -12,6 +12,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210110_cold2.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210123_movie.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             21/1/16 昼過ぎ
         </h3>
