--- a/210123_movie.html
+++ b/210123_movie.html
@@ -14,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210116_ryouri.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210126_gyouza.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/01/23　昼過ぎ
         </h3>
