--- a/210214_vd.html
+++ b/210214_vd.html
@@ -14,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210130_ts2.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210220_ts.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/02/14 おやつどき
         </h3>
