--- a/210304_furo.html
+++ b/210304_furo.html
@@ -14,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210303_hina.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210304_mashirobd.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/03/04　夕方頃　浴室
         </h3>
