--- a/210313_cake.html
+++ b/210313_cake.html
@@ -13,6 +13,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210304_mashirobd.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210314_cake2.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/03/13　昼過ぎ
         </h3>
