--- a/210321_1day2.html
+++ b/210321_1day2.html
@@ -11,6 +11,11 @@
 </head>
 <div class="background"></div>
 <div class="body">
+    <div class="footer">
+        <div class="page"><a href="210320_1day.html">prev</a></div>
+        <div class="page"><a href="index.html">top</a></div>
+        <div class="page"><a href="index.html">next</a></div>
+    </div>
     <h3 class="h3-b">
         2021/03/21 3時過ぎ </h3>
 
@@ -2870,7 +2875,14 @@
             ずっと、一緒にいるから。
         </div>
     </div>
-</div>
+    <div class="main">
+        <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files5768469ca1e9f3f7fcf439.png" alt="avatar">
+        </div>
+        <div class="p">
+            <b class="mitsu">夜高ミツル</b><br>
+            俺が隣りにいるから。
+        </div>
+    </div>
 </div>
 </body>
 
