--- a/180507_cover.html
+++ b/180507_cover.html
@@ -12,6 +12,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page">prev</div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="201028_mitsubd.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2018/05/07　八崎高校-昼休み
         </h3>
