--- a/201028_mitsubd.html
+++ b/201028_mitsubd.html
@@ -13,6 +13,11 @@
 <body>
   <div class="background"></div>
   <div class="body">
+    <div class="footer">
+        <div class="page"><a href="180507_cover.html">prev</a></div>
+        <div class="page"><a href="index.html">top</a></div>
+        <div class="page"><a href="201101_halloween.html">next</a></div>
+    </div>
     <h3 class="h3-b">
       2020/10/28　朝
   </h3>
