--- a/201223_xmas.html
+++ b/201223_xmas.html
@@ -12,6 +12,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="201111_monthly2.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="201231_newyear.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2020/12/23　朝
         </h3>
