--- a/210130_ts.html
+++ b/210130_ts.html
@@ -12,6 +12,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210126_gyouza.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210130_ts2.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/01/30 早朝
         </h3>
