--- a/210220_ts.html
+++ b/210220_ts.html
@@ -14,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210214_vd.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210226_goneru.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/02/20　昼過ぎ
         </h3>
