--- a/210226_goneru.html
+++ b/210226_goneru.html
@@ -14,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210220_ts.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210228_goneta.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/02/26　満月の一日前
         </h3>
