--- a/210228_goneta.html
+++ b/210228_goneta.html
@@ -14,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210226_goneru.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210303_hina.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/02/28 早朝
         </h3>
