--- a/210315_mashirobd1.html
+++ b/210315_mashirobd1.html
@@ -14,6 +14,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210314_cake2.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210315_mashirobd2.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/03/15　朝
         </h3>
