--- a/210316_mashirobd3.html
+++ b/210316_mashirobd3.html
@@ -13,6 +13,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210315_mashirobd2.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="210320_1day.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/03/16　早朝
         </h3>
